bk_ida/gccida/c1/find_comparison_args
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/cse.c:3588:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  find_comparison_args( 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/cse.c:3589:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/cse.c:3592:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode1, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/cse.c:3593:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode2) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/cse.c:3614:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v24; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/cse.c:3665:24: error: use of undeclared identifier 'machine_mode'
v14 = safe_hash( v5, ( machine_mode)v9); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/cse.c:3666:33: error: use of undeclared identifier 'machine_mode'
v15 = lookup( v5, v14 & 0x1F, ( machine_mode)*( ( unsigned __int8 *)v5 + 2)); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/cse.c:3703:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v16] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/cse.c:3717:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned int)v16] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_comparison_args/src/obj/cse.o] Error 1
